fixing audio gallery padding on mobile
SRFCMS-6290

--- a/source/_patterns/20-molecules/audio-gallery/audio-gallery.scss
+++ b/source/_patterns/20-molecules/audio-gallery/audio-gallery.scss
@@ -5,7 +5,8 @@
   margin: 32px -16px;
 
   @include smartphone {
-    margin: 24px -8px;
+    @include fullwidth-element;
+    padding: 0;
   }
 
   .article-audio__wrapper {
@@ -54,6 +55,10 @@
 .audio-gallery__item {
   margin: 0 0 2px;
   padding: 0;
+
+  @include smartphone {
+    padding: 0 8px;
+  }
 
   &:last-of-type {
     margin-bottom: 0;
